--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<head><title>Stelios Alevizos</title></head>
-<body>Hello world!</body>
+<head><title>Stelios Alevizos<\title><\head>
+<body>Hello world!<\body>
