--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<head><title>Stelios Alevizos<\title><\head>
-<body>Hello world!<\body>
+<!DOCTYPE html>
+<html>
+<head><title>Stelios Alevizos</title></head>
+<body>Hello world!</body>
+</html>
